--- a/README
+++ b/README
@@ -35,7 +35,7 @@
 
     ```bash
     $ apt-get install swig python-dev python3-dev
-    $ make nanopi_duo_defconfig ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabihf-
+    $ make nanopi_duo2_defconfig ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabihf-
     $ make ARCH=arm CROSS_COMPILE=arm-none-linux-gnueabihf-
     ```
 
